--- a/.github/workflows/content-web.yml
+++ b/.github/workflows/content-web.yml
@@ -9,7 +9,11 @@ on:
          - 'content-web/**'
 
    # Configure workflow to also support triggering manually
-   workflow_dispatch:
+   workflow_dispatch:inputs:
+     logLevel:
+       description: 'Log level'
+       required: true
+       default: 'warning'
 
  # Environment variables are defined so that they can be used throughout the job definitions.
  env:
