--- a/.github/workflows/content-init.yml
+++ b/.github/workflows/content-init.yml
@@ -14,9 +14,9 @@ on:
 # Environment variables are defined so that they can be used throughout the job definitions.
 env:
   imageRepository: 'content-init'
-  resourceGroupName: 'Fabmedical-[SHORT_SUFFIX]'
-  containerRegistryName: 'fabmedical[SHORT_SUFFIX]'
-  containerRegistry: 'fabmedical[SHORT_SUFFIX].azurecr.io'
+  resourceGroupName: 'Fabmedical-290990'
+  containerRegistryName: 'acr290990'
+  containerRegistry: 'acr290990.azurecr.io'
   dockerfilePath: './content-init'
   tag: '${{ github.run_id  }}'
 
